Fjerner unødvendige avhengigheter til familie-komponenter